add filter markup

--- a/src/components/ProductsList/ProductsList.module.css
+++ b/src/components/ProductsList/ProductsList.module.css
@@ -1,11 +1,13 @@
 .productsList {
+  margin: 0;
+  grid-area: products;
+  grid-column: span 2;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  max-width: 736px;
+  justify-content: space-around;
+  max-width: 796px;
   list-style: none;
   padding-inline-start: 0px;
-  margin: 50px;
 }
 
 .itemWrapper {
