--- a/src/components/SelectCategory/SelectCategory.module.css
+++ b/src/components/SelectCategory/SelectCategory.module.css
@@ -16,13 +16,11 @@
   align-items: flex-start;
 }
 
-.categoryButton {
-  background: #ffffff;
-  border: 1px solid #7e8fa4;
-  box-sizing: border-box;
-  border-radius: 15px;
-  height: 30px;
-  width: 80px;
+.categoryButtonsWrapper {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .active {
@@ -32,13 +30,35 @@
   color: #ffffff;
 }
 
-.categoryButtonsWrapper {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+.categoryLabel {
+  cursor: pointer;
+  font-family: OpenSans, sans-serif;
+  font-weight: normal;
+  font-size: 14px;
+  color: #7e8fa4;
+  cursor: pointer;
+  background: #ffffff;
+  border: 1px solid #7e8fa4;
+  box-sizing: border-box;
+  border-radius: 15px;
+  height: 32px;
+  text-align: center;
+  line-height: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
-.categoryButtonLabel :first-letter {
-  text-transform: capitalize;
+.categoryInput:checked + .categoryLabel {
+  background: #323c48;
+  color: #ffffff;
+}
+
+.categoryLabel:first-letter {
+  text-transform: uppercase;
+}
+
+.categoryInput {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
 }
